# stair_detection

./: .gitignore  .gitmodules  README.md
imgs/: top_view_matlab.pgm
stairdetect/: CMakeLists.txt  package.xml
stairdetect/cfg/: StairDetect.cfg
stairdetect/include/gransac/: GRANSAC.hpp
stairdetect/include/stairdetect/: line.h  segment.h  stairdetect.h
stairdetect/launch/: stair_detect.launch  stair_detect_main.launch
stairdetect/rviz/: stair_detect_test.rviz
stairdetect/src/: line_fit_example.cpp  stairdetect.cpp  stairdetect_node.cpp
